--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "mocha": "^2.4.5",
+    "mongodb": "^2.1.16",
+    "mongoose": "^4.4.12",
+    "mongoose-seed": "^0.1.5",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
     "serve-favicon": "~2.3.0",
