--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-uuid": "^1.4.7",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
-    "socket.io-client": "^1.4.5"
+    "socket.io-client": "^1.4.5",
+    "unirest": "^0.4.2"
   }
 }
